--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             <div class="box">
                 <h1>🖼 Kokari</h1>
                 <p>Kokari: subtitle here</p>
-                <iframe src="https://tally.so/embed/wbqGg3?hideTitle=1&alignLeft=1&transparentBackground=1" width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0" title="Kokari Signup"></iframe>
+                <iframe src="https://tally.so/embed/wbqGg3?hideTitle=1&alignLeft=1&transparentBackground=1" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0" title="Kokari Signup"></iframe>
             </div>
         </main>
 
         <footer>
-            Made with ❤️ by Cherith
+            Made with ❤️ by AnythingEverything
         </footer>
 
     </body>
