--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <img src="images/hero.png" alt="iPhone Kokari App Screenshot">
             </div>
             <div class="box">
-                <h1>🖼 Kokari</h1>
+                <img class="headerImage" src="images/kokari.png" alt="Kokari Logo">
                 <p>Kokari: subtitle here</p>
-                <iframe src="https://tally.so/embed/wbqGg3?hideTitle=1&alignLeft=1&transparentBackground=1" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0" title="Kokari Signup"></iframe>
+                <iframe src="https://tally.so/embed/wbqGg3?hideTitle=1&alignLeft=1&transparentBackground=1" width="100%" height="460" frameborder="0" marginheight="0" marginwidth="0" title="Kokari Signup"></iframe>
             </div>
         </main>
 
