new image and text
and background card so text is readable

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <link rel="stylesheet" href="css/styles.css">
         <link rel="icon" type="image/png" href="images/favicon.png">
 
-        <title>Kokari: subtitle here</title>
+        <title>Kokari: Showcase your digital treasures</title>
 
-        <meta name="title" content="Kokari: subtitle here" />
-        <meta name="description" content="Kokari: subtitle here">
+        <meta name="title" content="Kokari: Showcase your digital treasures" />
+        <meta name="description" content="Kokari: Showcase your digital treasures">
 
-        <meta property="og:title" content="Kokari: subtitle here" />
-        <meta property="og:description" content="Kokari: subtitle here" />
+        <meta property="og:title" content="Kokari: Showcase your digital treasures" />
+        <meta property="og:description" content="Kokari: Showcase your digital treasures" />
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Kokari" />
         <meta property="og:url" content="https://www.kokari.app" />
@@ -21,8 +21,8 @@
 
         <meta name="twitter:card" content="summary" /> 
         <meta name="twitter:site" content="@kokari" />
-        <meta name="twitter:title" content="Kokari: subtitle here" />
-        <meta name="twitter:description" content="Kokari: subtitle here" />
+        <meta name="twitter:title" content="Kokari: Showcase your digital treasures" />
+        <meta name="twitter:description" content="Kokari: Showcase your digital treasures" />
         <meta property="twitter:url" content="https://www.kokari.app" />
         <meta name="twitter:image" content="" />
     </head>
@@ -33,9 +33,11 @@
             <div class="box">
                 <img src="images/hero.png" alt="iPhone Kokari App Screenshot">
             </div>
-            <div class="box">
+            <div class="box boxBackground">
                 <img class="headerImage" src="images/kokari.png" alt="Kokari Logo">
-                <p>Kokari: subtitle here</p>
+                <p style="font-weight: 700;">Kokari is a new app for collecting, experiencing, and sharing digital treasures.</p>
+                <p>Whether you want to showcase your NFTs to your friends or send an interactive bouquet of flowers to your loved one, Kokari lets you share immersive experiences that are unique, personal, and magical.</p>
+                <p>And for 3D artists, Kokari offers a revolutionary platform for imagining, creating, and sharing their work directly with their audience.</p>
                 <iframe src="https://tally.so/embed/wbqGg3?hideTitle=1&alignLeft=1&transparentBackground=1" width="100%" height="460" frameborder="0" marginheight="0" marginwidth="0" title="Kokari Signup"></iframe>
             </div>
         </main>
